unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/Customer_Family_Tree_Discount__c.object-meta.xml
<CustomObject>
    <description>Junction between Family Tree Discounts and the Customers</description>
    <label>Customer Family Tree Discount</label>
    <nameField>
        <displayFormat>CFD-{0000000000}</displayFormat>
        <label>Customer Family Tree Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Family Tree Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>