unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Family Tree Discounts</relationshipLabel>
    <relationshipName>Customer_Family_Tree_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>