unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Result of the family tree assignment action</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>