unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/fields/CFTD_Status__c.field-meta.xml
<CustomField>
    <fullName>CFTD_Status__c</fullName>
    <formula>IF(ISNULL(End_Date__c) &amp;&amp; Start_Date__c &lt;= TODAY(), &quot;Active&quot;, IF((Start_Date__c  &lt;=  TODAY()&amp;&amp;  End_Date__c  &gt;=  TODAY()),&quot;Active&quot;, &quot;Inactive&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>