unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/fields/Change_Requested_On__c.field-meta.xml
<CustomField>
    <fullName>Change_Requested_On__c</fullName>
    <description>Date the pricing assignment/removal change was requested</description>
    <label>Change Requested On</label>
    <type>Date</type>
</CustomField>