unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/fields/Customer_Family_Tree_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Family_Tree_External_ID__c</fullName>
    <label>Customer Family Tree External ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>