unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/fields/Customer_Family_Tree_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Family_Tree_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Customer Family Tree ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>