unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/fields/Family_Tree_Discount__c.field-meta.xml
<CustomField>
    <fullName>Family_Tree_Discount__c</fullName>
    <label>Family Tree Discount</label>
    <referenceTo>Family_Tree_Discount__c</referenceTo>
    <relationshipLabel>Customer Family Tree Discounts</relationshipLabel>
    <relationshipName>Customer_Family_Tree_Discounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>