unpackaged/main/default/objects/Customer_Family_Tree_Discount__c/fields/Family_Tree_Discount_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Tree_Discount_Name__c</fullName>
    <formula>Family_Tree_Discount__r.Name</formula>
    <label>Family Tree Discount Name</label>
    <type>Text</type>
</CustomField>